syntax = "proto3";

message Browse {
  ResponseContext responseContext = 1;
  n1F9 n1F9 = 9;
  n1F10 n1F10 = 10;

}
message ResponseContext{
  repeated  ServiceTrackingParams serviceTrackingParams = 6;
}
message ServiceTrackingParams{
  int32 service = 1;
  repeated Params params = 2;
}
message Params{
  string key = 1;
  string value = 2;
}
message n1F9 {
  m2F58173949 m2F58173949 = 58173949;
  n6F153515154 n6F153515154 = 153515154;
  n2F49399797 n2F49399797 = 49399797;
}
message n1F10 {
  n2F49399797 n2F49399797 = 49399797;
}
message m2F58173949 {
  repeated m3F1 m3F1 = 1;
}
message m3F1 {
  m4F58174010 m4F58174010 = 58174010;
}
message m4F58174010 {
  n1F10 n1F10 = 4;
}

message n2F49399797 {
  repeated n3F1 n3F1 = 1;
}

message n3F1 {
  n4F50195462 n4F50195462 = 50195462;
  n4F51845067 n4F51845067 = 51845067;
  n4F221496734 m4F221496734 = 221496734;
}

message n4F50195462 {
  repeated n5F1 n5F1 = 1;
}

message n4F51845067 {
  n5F5 n5F5 = 5;
}

message n4F221496734{
  n5F3 n5F3 = 3;
  n5F10 n5F10 = 10;
}
message n5F1 {
  n6F153515154 n6F153515154 = 153515154;
}
message n5F3{
  n6F1 n6F1 = 1;
}
message n5F5 {
  n6F51431404 n6F51431404 = 51431404;
}

message n6F1 {
  string staticLyric = 1;

}
message n6F153515154 {
  n7F172660663 n7F172660663 = 172660663;
}
message n6F51431404 {
  repeated n5F1 n5F1 = 1;
}

message n7F172660663 {
  n8F1 n8F1 = 1;
  n8F2 n8F2 = 2;
  n8F3 n8F3 = 3;
}
message n5F10{
  Origin origin = 1;
}
message n8F1 {
  n9F168777401 n9F168777401 = 168777401;
}

message n8F2 {
  n9F183314536 n9F183314536 = 183314536;
}
message n8F3 {
  n8F1 n8F1 = 1;
  n8F2 n8F2 = 2;
}
message Origin{
  string originText = 1;
}
message n9F168777401 {
  n10F3 n10F3 = 3;
  n10F5 n10F5 = 5;
}
message n9F183314536 {
  string type = 1;
}
message n10F3 {
  n11F172035250 n11F172035250 = 172035250;
}
message n10F5{
  n11F465160965 n11F465160965 = 465160965;
}
message n11F465160965{
  n12F4 n12F4 = 4;
}
message n12F4{
  repeated n13F1 n13F1 = 1;
  string originText = 2;
}
message n13F1{
  string f1 = 1;
}
message n11F172035250 {
  string type = 1;
}

message Next {
  a1F7 a1F7 = 7;
  a1F8 a1F8 = 8;
}

message a1F7 {
  a2F51779735 a2F51779735 = 51779735;
  MusicPlayRender musicPlayRender = 125354411;
}

message a1F8 {
  n2F49399797 n2F49399797 = 49399797;
}
message MusicPlayRender{
  BottomRender bottomRender = 7;
}

message BottomRender{
  SectionTab sectionTab = 91700600;
}

message SectionTab{
  repeated Item items = 1;
}

message Item{
  Tab tab = 58174010;
}

message Tab{
  Info info = 1;
  string name = 2;
}

message Info{
  BrowseInfo BrowseInfo = 48687626;
}
message BrowseInfo{
  string browseId = 2;
}

message a2F51779735 {
  a3F1 a3F1 = 1;
}

message a3F1 {
  n2F49399797 n2F49399797 = 49399797;
}

message Search {
  s1F4 s1F4 = 4;
  s1F7 s1F7 = 7;
}

message s1F4 {
  n2F49399797 n2F49399797 = 49399797;
}

message s1F7 {
  n4F50195462 n4F50195462 = 50195462;
  n2F49399797 n2F49399797 = 49399797;
}

message Shorts {
  repeated t1F2 t1F2 = 2;
}

message t1F2 {
  n2F1 n2F1 = 1;
}

message n2F1 {
  n3F139608561 n3F139608561 = 139608561;
}

message n3F139608561 {
  n4F8 n4F8 = 8;
}

message n4F8 {
  n4F139970731 n4F139970731 = 139970731;
}

message n4F139970731{
  int32 f1 = 12;
}

message Guide {
  repeated g1F4 g1F4 = 4;
  repeated g1F6 g1F6 = 6;
}
message g1F4 {
  g2F117866661 g2F117866661 = 117866661;
}

message g1F6 {
  g2F117866661 g2F117866661 = 117866661;
}

message g2F117866661 {
  repeated g3F1 g3F1 = 1;
}
message g3F1 {
  guideEntryRenderer iconRender = 318370163;
  guideEntryRenderer labelRender = 117501096;
}
message guideEntryRenderer {
  string browseId = 1;
}

message Name {
  repeated Runs runs = 1 [json_name = "runs"];
  message Runs {
    string text = 1 [json_name = "text"];
  };
};

message Player {
  repeated p1F7 p1F7 = 7;
  p1F2 p1F2 = 2;
  p1F4 p1F4 = 4;
  Captions captions = 10 [json_name = "captions"];
  p1F14 p1F14 = 14;
  message Captions {
    PlayerCaptionsTracklistRenderer playerCaptionsTracklistRenderer = 51621377 [json_name = "playerCaptionsTracklistRenderer"];

    message PlayerCaptionsTracklistRenderer {
      repeated CaptionTracks captionTracks = 1 [json_name = "captionTracks"];
      repeated AudioTracks audioTracks = 2 [json_name = "audioTracks"];
      repeated TranslationLanguages translationLanguages = 3 [json_name = "translationLanguages"];
      optional int32 defaultAudioTrackIndex = 4 [json_name = "defaultAudioTrackIndex"];
      optional int32 defaultCaptionTrackIndex = 6 [json_name = "defaultCaptionTrackIndex"];

      message CaptionTracks {
        string baseUrl = 1 [json_name = "baseUrl"];
        Name name = 2 [json_name = "name"];
        string vssId = 3 [json_name = "vssId"];
        string languageCode = 4 [json_name = "languageCode"];
        optional string kind = 5 [json_name = "kind"];
        optional bool rtl = 6 [json_name = "rtl"];
        bool isTranslatable = 7 [json_name = "isTranslatable"];
      };

      message AudioTracks {
        repeated int32 captionTrackIndices = 2 [json_name = "captionTrackIndices", packed = false];
        optional int32 defaultCaptionTrackIndex = 3 [json_name = "defaultCaptionTrackIndex"];
        optional int32 forcedCaptionTrackIndex = 4 [json_name = "forcedCaptionTrackIndex"];
        optional int32 visibility = 5 [json_name = "visibility"];
        optional bool hasDefaultTrack = 6 [json_name = "hasDefaultTrack"];
        optional bool hasForcedTrack = 7 [json_name = "hasForcedTrack"];
        optional string audioTrackId = 8 [json_name = "audioTrackId"];
        optional int32 captionsInitialState = 11 [json_name = "captionsInitialState"];
      };

      message TranslationLanguages {
        string languageCode = 1 [json_name = "languageCode"];
        Name languageName = 2 [json_name = "languageName"];
        //??? ??? = 3 [json_name = "???"];
      };
    };
  };
}

message p1F2{
  int32 p2F1 = 1; // premium: 0
  string p2F2 = 2;
  p2F10 p2F10 = 10;
  p2F21 p2F21 = 21;
  p2F11 p2F11 = 11;
}
message p1F4{
  repeated p4F3 p4F3 = 3;
}
message p4F3{
  string stream = 2;
  string codecs = 5;
  uint32 w = 7;
  uint32 h = 8;
}
message p1F7 {
  p2F84813246 p2F84813246 = 84813246;
}
message p1F14{
  string f1 = 1;
  uint32 f2 = 2;
  uint32 f3 = 3;
  uint32 f5 = 5;
}
message p2F84813246 {
  int32 v = 3;
}
message p2F21 {
  p3F151635310 p3F151635310 = 151635310;
}
message p2F10{
  n60572968 pn60572968 = 60572968;
}
message pn60572968{
  int32 f1 = 1;
  repeated videoInfo videoInfo = 3;
  // da2F2 f4 = 4;
}
message videoInfo{
  int32 f3 = 3;
  int32 f4 = 4;
  int32 f5 = 5;
}
message  p2F11{
  p3F64657230 p3F64657230 = 64657230;
}
message p3F151635310{
  int32 pip = 1;
}
message p3F64657230{
  int32 backPlay = 1;
}

message Setting{
  repeated st1F6 st1F6 = 6;
  st1F7 st1F7 = 7;
  st1F10 st1F10 = 10;
}

message st1F6{
  st2F88478200 st2F88478200 = 88478200;
  st2F66930374 st2F66930374 = 66930374;
}
message  st1F7{
  st2F88478200 st2F88478200 = 88478200;
}
message st1F10{
  st2F4 st2F4 = 4;
}

message st2F4 {
  uint64 f1 = 1 [jstype = JS_STRING];
  fixed32 f2 = 2;
  fixed32 f3 = 3;
}
message st2F88478200{
  //  st3F1 st3F1 = 1;
  int32 f2 = 2;
  int32 f3 = 3;
  st3F5 st3F5 = 5;
  int32 f6 = 6;
  int32 f7 = 7;
  int32 f8 = 8;
  int32 f9 = 9;
  int32 f10 = 10;
  int32 f12 = 12;
}
message st2F66930374{
  repeated st3F3 st3F3 = 3;
  int32 num = 4;
}

message st3F1{
  st4F1 st4F1 = 1;
}
message st3F3{
  st4F61331416 st4F61331416 = 61331416;
}
message st3F5{
  int32 f1 = 1;
  int32 f2 = 2;
  int32 f3 = 3;
  st2F4 st2F4 = 4;
}
message st4F1{
  string title = 1;
}
message st4F61331416{
  st5F5 st5F5 = 5;
  st5F5 st5F6 = 6;
  st3F5 st3F5 = 13;
  int32 f15 = 15;
}
message st5F5{
  st3F5 st3F5 = 2;
  st6F81212182 st6F81212182 = 81212182;
}
message st6F81212182{
  st7F1 st7F1 = 1;
}
message st7F1{
  st8F1 st8F1 = 1;
  int32 f3 = 3;
}
message st8F1{
  int32 f1 = 1;
}

message DownloadAction{
  da1F2 da1F2 = 2;
  da2F2 da1F4 = 4;
}
message da1F2{
  da2F2 da2F2 = 2;
  optional n2F204158123 n2F204158123 = 204158123;
  optional n3F174116574 n3F174116574 = 174116574;
}
message n2F204158123{
  n3F278463287 n3F278463287 = 278463287;
}
message n3F278463287{

}
message da2F2{
  int32 f1 = 1;
  int32 f2 = 2;
  da3F4 da3F4 = 4;
  string da3F6 = 6;
}
message da3F4{
  uint64 f1 = 1;
  // uint32 f1 = 1;
  float f2 = 2;
  float f3 = 3;
}
message n3F174116574{
  da4F1 da4F1 = 1;
}
message da4F1{
  da2F2 da5F2 = 2;
  da5F73080600 da5F73080600 = 73080600;
}
message da5F73080600{
  string videoId = 1;
  int32 da6F2 = 2;
  da6F4 da6F4 = 4;
  da6F6 da6F6 = 6;
}
message da6F4{
  n60572968 n60572968 = 60572968;
}
message da6F6 {
  int32 f1 = 1;
  int32 f2 = 2;
}
message n60572968{
  int32 da7F1 = 1;
  da2F2 da7F4 = 4;
}
